# python-project-lvl4

./: .env  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: CI.yml
app/: apps.py  filter.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_alter_task_labels.py  0002_auto_20210512_1926.py
locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/: filter.py  forms.py  models.py  settings.py  urls.py  views.py
templates/: base.html  del_user.html  index.html  logout.html  register.html  users.html
templates/labels/: label_create.html  label_list.html
templates/statuses/: statuses_edit.html  statuses_list.html
templates/tasks/: tasks_delete.html  tasks_list.html
templates/users/: edit_user.html
website/: settings.py  urls.py
