[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Artem Arkhipov <arkhipov@algomost.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
