[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["Artem Arkhipov <arkhipov@algomost.ru>"]

packages = [
  { include = "task_manager" },
]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
gunicorn = "^20.1.0"
django-bootstrap4 = "^3.0.1"
django-filter = "^2.4.0"
rollbar = "^0.15.2"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
coverage = "^5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
